--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Automatic Web Deploy
 on:
   push:
     branches:
-      - main
+    - main
 jobs:
   task:
     runs-on: ubuntu-latest
@@ -26,8 +26,8 @@ jobs:
       run: touch ./output/wwwroot/.nojekyll
     -
       name: Deploy Website
-      uses: JamesIves/github-pages-deploy-action@4.1.3
+      uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
         branch: website
         folder: ./output/wwwroot
-        single_commit: true
+        single-commit: true
