--- a/FakerSpotter/FakerSpotter.csproj
+++ b/FakerSpotter/FakerSpotter.csproj
@@ -1,12 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.7" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.7" PrivateAssets="all" />
+		<PackageReference Include="Blazorise.Bootstrap" Version="0.9.4.1" />
+		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.4.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.8" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.8" PrivateAssets="all" />
 		<PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
 	</ItemGroup>
 
