--- a/FakerSpotter/FakerSpotter.csproj
+++ b/FakerSpotter/FakerSpotter.csproj
@@ -9,6 +9,7 @@
 		<PackageReference Include="Blazored.LocalStorage" Version="4.1.2"/>
 		<PackageReference Include="Blazorise.Bootstrap" Version="0.9.4.2"/>
 		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.4.2"/>
+		<PackageReference Include="Markdig" Version="0.25.0"/>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.8"/>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.8" PrivateAssets="all"/>
 		<PackageReference Include="System.Net.Http.Json" Version="5.0.0"/>
