--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,17 +14,14 @@ jobs:
         dotnet-version: 5.0.x
     -
       name: Publish Website
-      run: |
-        cp ./FakerSpotter/wwwroot/index.html ./FakerSpotter/wwwroot/404.html
-        dotnet publish ./FakerSpotter/FakerSpotter.csproj --configuration Release --output ./output
+      run: dotnet publish ./FakerSpotter/FakerSpotter.csproj --configuration Release --output ./output
     - 
-      name: Fix Base URL
+      name: Add Patches
       run: |
         sed --in-place 's/<base href="\/"\/>/<base href="\/FakerSpotter\/"\/>/g' ./output/wwwroot/index.html
         sed --in-place 's/<base href="\/" \/>/<base href="\/FakerSpotter\/" \/>/g' ./output/wwwroot/index.html
-    - 
-      name: Disable Jekyll
-      run: touch ./output/wwwroot/.nojekyll
+        cp ./output/wwwroot/index.html ./output/wwwroot/404.html
+        touch ./output/wwwroot/.nojekyll
     -
       name: Deploy Website
       uses: JamesIves/github-pages-deploy-action@4.1.4
