Updated deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,10 @@
 name: Automatic Web Deploy
-on: push
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - FakerSpotter/**
 jobs:
   task:
     runs-on: ubuntu-latest
