--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-name: Deploy Website for FakerSpotter
 on:
   push:
     branches:
@@ -6,30 +5,24 @@ on:
     paths:
       - FakerSpotter/**
 jobs:
-  task:
+  build:
     runs-on: ubuntu-latest
     steps:
-    -
-      name: Checkout Repository
+    - name: Checkout
       uses: actions/checkout@v2
-    -
-      name: Setup .NET
-      uses: actions/setup-dotnet@v1.8.0
+    - name: Setup
+      uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-    -
-      name: Publish Website
-      run: dotnet publish ./FakerSpotter/FakerSpotter.csproj --configuration Release --output ./output
-    - 
-      name: Add Website Patches
+    - name: Publish
       run: |
+        dotnet publish ./FakerSpotter/FakerSpotter.csproj --configuration Release --output ./output
         sed --in-place 's/<base href="\/"\/>/<base href="\/FakerSpotter\/"\/>/g' ./output/wwwroot/index.html
         sed --in-place 's/<base href="\/" \/>/<base href="\/FakerSpotter\/" \/>/g' ./output/wwwroot/index.html
         cp ./output/wwwroot/index.html ./output/wwwroot/404.html
         touch ./output/wwwroot/.nojekyll
-    -
-      name: Deploy Website
-      uses: JamesIves/github-pages-deploy-action@4.1.4
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@4.2.0
       with:
         branch: website
         folder: ./output/wwwroot
