--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,5 @@
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - FakerSpotter/**
+name: Deploy
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,14 +12,13 @@ jobs:
         dotnet-version: 6.0.x
     - name: Publish
       run: |
-        dotnet publish ./FakerSpotter/FakerSpotter.csproj --configuration Release --output ./output
-        sed --in-place 's/<base href="\/"\/>/<base href="\/FakerSpotter\/"\/>/g' ./output/wwwroot/index.html
-        sed --in-place 's/<base href="\/" \/>/<base href="\/FakerSpotter\/" \/>/g' ./output/wwwroot/index.html
-        cp ./output/wwwroot/index.html ./output/wwwroot/404.html
-        touch ./output/wwwroot/.nojekyll
+        dotnet publish FakerSpotter.sln --configuration Release --output build
+        sed --in-place 's/base href="\/"/base href="\/FakerSpotter\/"/g' build/wwwroot/index.html
+        cp build/wwwroot/index.html build/wwwroot/404.html
+        touch build/wwwroot/.nojekyll
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.2.0
       with:
-        branch: website
-        folder: ./output/wwwroot
+        branch: live
+        folder: build
         single-commit: true
