--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: Deploy
-on: push
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,5 +20,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@4.2.0
       with:
         branch: live
-        folder: build
+        folder: build/wwwroot
         single-commit: true
