--- a/FakerSpotter/FakerSpotter.csproj
+++ b/FakerSpotter/FakerSpotter.csproj
@@ -2,16 +2,18 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="BlazorAnimate" Version="3.0.0"/>
-		<PackageReference Include="Blazored.LocalStorage" Version="4.1.5"/>
-		<PackageReference Include="Blazorise.Bootstrap" Version="0.9.5.3"/>
-		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.5.3"/>
-		<PackageReference Include="Markdig" Version="0.26.0"/>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1"/>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all"/>
+		<PackageReference Include="Blazored.LocalStorage" Version="4.2.0"/>
+		<PackageReference Include="Blazorise.Bootstrap" Version="1.0.1"/>
+		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.1"/>
+		<PackageReference Include="Markdig" Version="0.28.0"/>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3"/>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all"/>
 		<PackageReference Include="System.Net.Http.Json" Version="6.0.0"/>
 	</ItemGroup>
 
