--- a/FakerSpotter/FakerSpotter.csproj
+++ b/FakerSpotter/FakerSpotter.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Blazored.LocalStorage" Version="4.2.0"/>
-		<PackageReference Include="Blazorise.Bootstrap" Version="1.0.1"/>
-		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.1"/>
-		<PackageReference Include="Markdig" Version="0.28.0"/>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3"/>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all"/>
-		<PackageReference Include="System.Net.Http.Json" Version="6.0.0"/>
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
+        <PackageReference Include="Blazorise.Bootstrap" Version="1.0.5" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.5" />
+        <PackageReference Include="Blazorise.SpinKit" Version="1.0.5" />
+        <PackageReference Include="Markdig" Version="0.30.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.6" PrivateAssets="all" />
+        <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+    </ItemGroup>
 
 </Project>
