Updated deployment workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,24 @@
-name: Deploy Live Website
+name: Automatic Deployment Workflow
 on:
   push:
     branches:
       - main
     paths:
       - FakerSpotter/**
+  workflow_dispatch:
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+concurrency:
+  group: workflow
+  cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -20,10 +31,12 @@ jobs:
           dotnet publish FakerSpotter.sln --configuration Release --output build
           sed --in-place 's/base href="\/"/base href="\/FakerSpotter\/"/g' build/wwwroot/index.html
           cp build/wwwroot/index.html build/wwwroot/404.html
-          touch build/wwwroot/.nojekyll
-      - name: Deploy Build
-        uses: JamesIves/github-pages-deploy-action@4.2.0
+      - name: Setup Pages
+        uses: actions/configure-pages@v1
+      - name: Upload Artifacts
+        uses: actions/upload-pages-artifact@v1
         with:
-          branch: live
-          folder: build/wwwroot
-          single-commit: true
+          path: build/wwwroot
+      - name: Deploy Artifacts
+        id: deployment
+        uses: actions/deploy-pages@main
