--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,7 +2,7 @@ name: GitHub Pages
 on:
   push:
     paths:
-      - FakerSpotter/**
+      - src/app/**
   workflow_dispatch:
 permissions:
   contents: read
@@ -14,6 +14,9 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src/app
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -41,4 +44,4 @@ jobs:
     steps:
       - name: Deploy Artifacts
         id: deployment
-        uses: actions/deploy-pages@main
+        uses: actions/deploy-pages@v1
