--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,15 +29,18 @@ jobs:
       - name: Publish Project
         run: |
           dotnet publish --configuration Release --output build
-          sed --in-place 's/base href="\/"/base href="\/FakerSpotter\/"/g' build/wwwroot/index.html
-          cp build/wwwroot/index.html build/wwwroot/404.html
+          sed --in-place 's/base href="\/"/base href="\/FakerSpotter\/"/g' /build/wwwroot/index.html
+          cp ./build/wwwroot/index.html ./build/wwwroot/404.html
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v1
         with:
-          path: build/wwwroot
+          path: ./build/wwwroot
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    defaults:
+      run:
+        working-directory: ./src/app
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
