Updated deployment workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Live Deployment
-run-name: "${{ github.workflow }} #${{ github.run_id }}"
+run-name: "${{ github.workflow }} #${{ github.run_number }}"
 on:
   push:
     paths:
