--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,12 @@ permissions:
   pages: write
   id-token: write
 jobs:
-  build:
-    name: Build Website
+  main:
+    name: Build & Deploy
     runs-on: ubuntu-latest
+    environment:
+      name: GitHub Pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout Branch
         uses: actions/checkout@v3
@@ -32,14 +35,6 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: build/wwwroot
-  deploy:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy Artifacts
-        id: deployment
+      - id: deployment
+        name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
