--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,36 @@
-# ide folders
-.vs/
-.idea/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# build folders
-[Bb]in/
-[Oo]bj/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# user files
-*.user
-*.suo
+# testing
+/coverage
 
-# misc files
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-Desktop.ini
-Thumbs.db
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
