--- a/package.json
+++ b/package.json
@@ -9,19 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.4",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "bootstrap": "5.2.3",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "framer-motion": "10.12.16",
-    "next": "13.4.4",
+    "@types/node": "20.5.6",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "bootstrap": "^5.3.1",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "8.0.7",
-    "sass": "1.62.1",
-    "swr": "2.1.5",
-    "typescript": "5.0.4"
+    "react-markdown": "^8.0.7",
+    "sass": "1.66.1",
+    "swr": "^2.2.1",
+    "typescript": "5.2.2"
   }
 }
