--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "5.3.1",
     "next": "13.4.19",
+    "pocketbase": "0.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "8.0.7",
     "sass": "1.66.1",
-    "swr": "^2.2.1",
+    "swr": "2.2.1",
     "typescript": "5.2.2"
   }
 }
