--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.18",
-    "bootstrap": "5.3.2",
-    "next": "14.0.4",
-    "pocketbase": "0.20.1",
-    "react": "18.2.0",
-    "react-bootstrap": "2.9.1",
-    "react-dom": "18.2.0",
-    "react-markdown": "9.0.1",
-    "sass": "1.69.5",
-    "swr": "2.2.4",
-    "typescript": "5.3.3"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "appwrite": "^13.0.1",
+    "bootstrap": "^5.3.2",
+    "next": "^14.0.4",
+    "pocketbase": "^0.20.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "sass": "^1.69.5",
+    "swr": "^2.2.4",
+    "typescript": "^5.3.3"
   }
 }
