--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# IDE configurations
+.vs/
+.idea/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Environment files
+node_modules/
 
-# testing
-/coverage
+# Output files: Next.js
+.vercel/
+.next/
+next-env.d.ts
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
+# User-specific files
 .env*.local
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Miscellaneous files
+.DS_Store
+Desktop.ini
+Thumbs.db
