--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-	"name": "fakerspotter",
-	"version": "1.0.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@types/node": "^20.10.5",
-		"@types/react": "^18.2.45",
-		"@types/react-dom": "^18.2.18",
-		"appwrite": "^13.0.1",
-		"bootstrap": "^5.3.2",
-		"next": "^14.0.4",
-		"pocketbase": "^0.20.1",
-		"react": "^18.2.0",
-		"react-bootstrap": "^2.9.2",
-		"react-dom": "^18.2.0",
-		"react-markdown": "^9.0.1",
-		"sass": "^1.69.5",
-		"swr": "^2.2.4",
-		"typescript": "^5.3.3"
-	}
+  "name": "fakerspotter",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "appwrite": "^13.0.2",
+    "bootstrap": "^5.3.3",
+    "next": "14.1.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "swr": "^2.2.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "sass": "^1.71.1",
+    "typescript": "^5.4.2"
+  }
 }
