--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fakerspotter",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,20 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "appwrite": "^13.0.2",
     "bootstrap": "^5.3.3",
     "next": "14.1.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@types/node": "^20.11.25",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "sass": "^1.71.1",
-    "typescript": "^5.4.2"
+    "@types/node": "^20.16.1",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.6",
+    "sass": "^1.77.8",
+    "typescript": "^5.5.4"
   }
 }
