--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "next": "14.1.3",
-    "react": "^18.3.1",
+    "next": "14.2.6",
+    "react": "18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-markdown": "^9.0.1",
     "swr": "^2.2.5"
   },
@@ -22,7 +22,7 @@
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
-    "eslint": "8.57.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.6",
     "sass": "^1.77.8",
     "typescript": "^5.5.4"
