--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
   "name": "fakerspotter",
-  "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "cf:gen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
+    "cf:build": "opennextjs-cloudflare build"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "next": "14.2.6",
-    "react": "18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "18.3.1",
-    "react-markdown": "^9.0.1",
-    "swr": "^2.2.5"
+    "@opennextjs/cloudflare": "^1.11.0",
+    "bootstrap": "^5.3.8",
+    "next": "14.2.33",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.1.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
-    "@types/node": "^20.16.1",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.6",
-    "sass": "^1.77.8",
-    "typescript": "^5.5.4"
+    "@types/node": "^20.19.24",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "sass": "^1.93.3",
+    "typescript": "^5.9.3",
+    "wrangler": "^4.45.3"
   }
 }
