--- a/package.json
+++ b/package.json
@@ -4,25 +4,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "cf:gen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
-    "cf:build": "opennextjs-cloudflare build"
+    "types": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
-    "@opennextjs/cloudflare": "^1.11.0",
+    "@opennextjs/cloudflare": "1.11.1",
     "bootstrap": "^5.3.8",
-    "next": "14.2.33",
-    "react": "^18.3.1",
+    "next": "14.2.35",
+    "react": "18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-markdown": "^9.1.0",
-    "swr": "^2.3.6"
+    "swr": "^2.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.24",
-    "@types/react": "^18.3.26",
+    "@types/node": "^25.3.0",
+    "@types/react": "^18.3.28",
     "@types/react-dom": "^18.3.7",
-    "sass": "^1.93.3",
+    "sass": "^1.97.3",
     "typescript": "^5.9.3",
-    "wrangler": "^4.45.3"
+    "wrangler": "^4.67.0"
   }
 }
